Add Mockito as agent for Java 21+
(cherry picked from commit 4649670f9d3c16ba18353eae847793804daef262)

Conflicts:
	pom.xml