@@ -49,6 +49,7 @@
     <logback.version>1.2.13</logback.version>
 
     <maven.dependency.plugin.version>3.8.0</maven.dependency.plugin.version>
+    <maven.resources.plugin.version>3.3.1</maven.resources.plugin.version>
     <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
     <maven.surefire.plugin.version>3.5.0</maven.surefire.plugin.version>
     <maven.failsafe.plugin.version>3.5.0</maven.failsafe.plugin.version>
@@ -165,6 +166,19 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
         <version>${maven.dependency.plugin.version}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>properties</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>${maven.resources.plugin.version}</version>
       </plugin>
 
       <plugin>
@@ -172,6 +186,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven.compiler.plugin.version}</version>
         <configuration>
+          <release>11</release>
           <source>${java.compile.version}</source>
           <target>${java.compile.version}</target>
           <compilerArgument>-Xlint:unchecked</compilerArgument>
@@ -183,7 +198,8 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${maven.surefire.plugin.version}</version>
         <configuration>
-          <argLine>${test-arguments}</argLine>
+          <!-- adding ${argLine} at the beginning is necessary if other plugins set it -->
+          <argLine>${surefire-test-arguments}</argLine>
           <systemPropertyVariables>
             <net.bytebuddy.experimental>true</net.bytebuddy.experimental>
           </systemPropertyVariables>
@@ -348,12 +364,21 @@
     </profile>
 
     <profile>
+      <id>jvm-test-arguments-below-java-21</id>
+      <activation>
+        <jdk>[11,21)</jdk>
+      </activation>
+      <properties>
+        <surefire-test-arguments>-Xshare:off</surefire-test-arguments>
+      </properties>
+    </profile>
+    <profile>
       <id>jvm-test-arguments-java-21-and-more</id>
       <activation>
         <jdk>[21,)</jdk>
       </activation>
       <properties>
-        <test-arguments>-XX:+EnableDynamicAgentLoading</test-arguments>
+        <surefire-test-arguments>-Xshare:off -javaagent:${org.mockito:mockito-core:jar}</surefire-test-arguments>
       </properties>
     </profile>
 
